pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprAndCondsAdmin_AdminPoliciesEnabled/adminPolicies.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(allow: (src: (*) dst: (tag = Slytherin and tag != DB) conn: All Connections)'
        nsx-id: "9198"
    creationTimestamp: null
    name: admin-policy-0
spec:
    ingress:
        - action: Allow
          from:
            - pods:
                namespaceSelector:
                    matchExpressions:
                        - key: kubernetes.io/metadata.name
                          operator: In
                          values:
                            - default
                podSelector: {}
          ports: null
    priority: 1
    subject:
        pods:
            namespaceSelector:
                matchLabels:
                    kubernetes.io/metadata.name: default
            podSelector:
                matchExpressions:
                    - key: tag__Slytherin
                      operator: Exists
                    - key: tag__DB
                      operator: DoesNotExist
status:
    conditions: null
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(allow: (src: (tag = Gryffindor) dst: (tag = Slytherin and tag != DB) conn: All Connections)'
        nsx-id: "9199"
    creationTimestamp: null
    name: admin-policy-1
spec:
    egress:
        - action: Allow
          ports: null
          to:
            - pods:
                namespaceSelector:
                    matchExpressions:
                        - key: kubernetes.io/metadata.name
                          operator: In
                          values:
                            - default
                podSelector:
                    matchExpressions:
                        - key: tag__Slytherin
                          operator: Exists
                        - key: tag__DB
                          operator: DoesNotExist
    priority: 2
    subject:
        pods:
            namespaceSelector:
                matchLabels:
                    kubernetes.io/metadata.name: default
            podSelector:
                matchExpressions:
                    - key: tag__Gryffindor
                      operator: Exists
status:
    conditions: null
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(allow: (src: (*) dst: (tag = Gryffindor and tag != DB) conn: All Connections)'
        nsx-id: "9200"
    creationTimestamp: null
    name: admin-policy-2
spec:
    ingress:
        - action: Allow
          from:
            - pods:
                namespaceSelector:
                    matchExpressions:
                        - key: kubernetes.io/metadata.name
                          operator: In
                          values:
                            - default
                podSelector: {}
          ports: null
    priority: 3
    subject:
        pods:
            namespaceSelector:
                matchLabels:
                    kubernetes.io/metadata.name: default
            podSelector:
                matchExpressions:
                    - key: tag__Gryffindor
                      operator: Exists
                    - key: tag__DB
                      operator: DoesNotExist
status:
    conditions: null
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(allow: (src: (*) dst: (tag = Hufflepuff and tag != DB) conn: All Connections)'
        nsx-id: "9201"
    creationTimestamp: null
    name: admin-policy-3
spec:
    egress:
        - action: Allow
          ports: null
          to:
            - pods:
                namespaceSelector:
                    matchExpressions:
                        - key: kubernetes.io/metadata.name
                          operator: In
                          values:
                            - default
                podSelector:
                    matchExpressions:
                        - key: tag__Hufflepuff
                          operator: Exists
                        - key: tag__DB
                          operator: DoesNotExist
    priority: 4
    subject:
        pods:
            namespaceSelector:
                matchLabels:
                    kubernetes.io/metadata.name: default
            podSelector: {}
status:
    conditions: null
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(deny: (src: (*) dst: (*) conn: All Connections)'
        nsx-id: "10300"
    creationTimestamp: null
    name: admin-policy-4
spec:
    egress:
        - action: Deny
          ports: null
          to:
            - pods:
                namespaceSelector:
                    matchExpressions:
                        - key: kubernetes.io/metadata.name
                          operator: In
                          values:
                            - default
                podSelector: {}
    priority: 5
    subject:
        pods:
            namespaceSelector:
                matchLabels:
                    kubernetes.io/metadata.name: default
            podSelector: {}
status:
    conditions: null
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(deny: (src: (*) dst: (*) conn: All Connections)'
        nsx-id: "10300"
    creationTimestamp: null
    name: admin-policy-5
spec:
    ingress:
        - action: Deny
          from:
            - pods:
                namespaceSelector:
                    matchExpressions:
                        - key: kubernetes.io/metadata.name
                          operator: In
                          values:
                            - default
                podSelector: {}
          ports: null
    priority: 6
    subject:
        pods:
            namespaceSelector:
                matchLabels:
                    kubernetes.io/metadata.name: default
            podSelector: {}
status:
    conditions: null
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: Admin Network Policy To Allow Egress Access To DNS Server
        nsx-id: none
    creationTimestamp: null
    name: egress-dns-policy
spec:
    egress:
        - action: Allow
          ports:
            - portNumber:
                port: 53
                protocol: UDP
          to:
            - pods:
                namespaceSelector:
                    matchExpressions:
                        - key: kubernetes.io/metadata.name
                          operator: In
                          values:
                            - default
                podSelector:
                    matchExpressions:
                        - key: k8s-app
                          operator: In
                          values:
                            - kube-dns
    priority: 7
    subject:
        pods:
            namespaceSelector:
                matchLabels:
                    kubernetes.io/metadata.name: default
            podSelector:
                matchExpressions:
                    - key: k8s-app
                      operator: In
                      values:
                        - kube-dns
status:
    conditions: null
